<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/observation_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rectangle_light_goldenrod"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text_uuid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_question_id"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/text_question_id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/text_uuid"
        android:layout_marginLeft="5dp"
        android:hint="@string/general_no_value"
        android:textAppearance="?android:attr/textAppearanceLargeInverse" />

    <TextView
        android:id="@+id/text_question_concept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_uuid"
        android:text="@string/general_concept"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/text_question_concept_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_question_concept"
        android:layout_alignBottom="@+id/text_question_concept"
        android:layout_toRightOf="@+id/text_question_concept"
        android:layout_marginLeft="5dp"
        android:hint="@string/general_no_value"
        android:singleLine="false"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

    <TextView
        android:id="@+id/text_response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_question_concept"
        android:text="@string/general_response"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <FrameLayout
        android:id="@+id/layout_response_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_response"
        android:layout_toRightOf="@+id/text_response"
        android:layout_marginLeft="5dp" >

        <TextView
            android:id="@+id/text_response_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:hint="@string/general_no_value"
        	android:onClick="view"
            android:textAppearance="?android:attr/textAppearanceMediumInverse" />
		
        <ImageView
            android:id="@+id/image_response_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/unknown"
            android:visibility="invisible" />
        
    </FrameLayout>

</RelativeLayout>
